; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_global_transport.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_global_transport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_transport = type { i32 }

@nn_transports = common dso_local global %struct.nn_transport** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nn_transport* @nn_global_transport(i32 %0) #0 {
  %2 = alloca %struct.nn_transport*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.nn_transport*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %22, %1
  %7 = load %struct.nn_transport**, %struct.nn_transport*** @nn_transports, align 8
  %8 = load i32, i32* %5, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds %struct.nn_transport*, %struct.nn_transport** %7, i64 %9
  %11 = load %struct.nn_transport*, %struct.nn_transport** %10, align 8
  store %struct.nn_transport* %11, %struct.nn_transport** %4, align 8
  %12 = icmp ne %struct.nn_transport* %11, null
  br i1 %12, label %13, label %25

13:                                               ; preds = %6
  %14 = load %struct.nn_transport*, %struct.nn_transport** %4, align 8
  %15 = getelementptr inbounds %struct.nn_transport, %struct.nn_transport* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %13
  %20 = load %struct.nn_transport*, %struct.nn_transport** %4, align 8
  store %struct.nn_transport* %20, %struct.nn_transport** %2, align 8
  br label %26

21:                                               ; preds = %13
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* %5, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %5, align 4
  br label %6

25:                                               ; preds = %6
  store %struct.nn_transport* null, %struct.nn_transport** %2, align 8
  br label %26

26:                                               ; preds = %25, %19
  %27 = load %struct.nn_transport*, %struct.nn_transport** %2, align 8
  ret %struct.nn_transport* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
